testing/Travis/testcases/TypeChecker/shouldFail/RightResidualTypeMismatch.adl
CONTEXT RightResidualTypeMismatchCheck IN ENGLISH

PURPOSE CONTEXT RightResidualTypeMismatchCheck
{+ Test that right residual fails when sources cannot be joined.
   This verifies the type checker correctly rejects r[A*B]\s~[C*B] due to mismatched sources. +}

RELATION r[A*B]
RELATION s[C*B]
RELATION result[B*C]

RULE testRightResidualFail: result = r\s~

ENDCONTEXT
